--- a/springboot-security/src/main/resources/application.yml
+++ b/springboot-security/src/main/resources/application.yml
@@ -5,7 +5,12 @@ spring:
     cache: false
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring-security?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://172.16.23.199:3308/spring_security?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+    username: fline
+    password: flineCloud@2019root
+mybatis:
+  config-location: classpath:mybatis-config.xml
+
+server:
+  port: 9090
